# Galaxy

./: .gitignore  README.md  app.py  pyproject.toml  vercel.json
scripts/: sync_public.py
src/galaxy/: __init__.py  data_cli.py  data_pipeline.py  main.py
tests/: test_app.py  test_data_pipeline.py  test_main.py
web/: app.js  galaxy-data.json  index.html  planet-page.js  planet.html  sector-page.js  sector.html  styles.css  system-page.js  system.html
