[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "galaxy"
version = "0.1.0"
description = "Galaxy starter project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0,<4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
galaxy = "galaxy.main:main"
galaxy-data = "galaxy.data_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
